added media queries

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <link rel="stylesheet" href="css/slick-theme.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -79,7 +78,7 @@
         <h1> Portfolio Work </h1>
         <div id="arrow-buttons"></div>
         <div class="portfolio-carousel">
-          <div id="tictactoe">
+          <div id="tictactoe" class="slides">
             <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">
                <img src="images/tictactoe.gif"/>
               </a>
@@ -96,7 +95,7 @@
 
           </div>
 
-          <div id="dashboard">
+          <div id="dashboard" class="slides">
             <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">
               <img src="images/dashboard.gif"/>
 
@@ -110,7 +109,7 @@
             </div>
           </div>
 
-          <div id="meetyou">
+          <div id="meetyou" class="slides">
             <a href="https://todo-meetyou.herokuapp.com/" target="_blank">
               <img src="images/meetyou.gif"/>
 
@@ -126,7 +125,7 @@
           </div>
 
 
-          <div id="loseit">
+          <div id="loseit" class="slides">
             <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">
               <img src="images/loseit.gif"/>
 
@@ -140,10 +139,10 @@
 
           </div>
 
-          <div id="portfolio">
+          <div id="portfolio" class="slides">
 
    <img src="images/portfolio.png"/>
-  
+
             <div class="port-content">
               <h2>Portfolio </h2><a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
   <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a>
