fixed order of slick slides

--- a/index.html
+++ b/index.html
@@ -51,21 +51,22 @@
 
       <div id="section_2" class="box">
         <div class="image-button">
-        <img class="photo" src="images/zabrina4.png" alt="zabrina picture">
-        <button id="resume">View my Resume</button>
-        <div id="social">
-          <a href="https://zabrinatan.github.io" target="_blank"><img src="images/portfolio.svg" alt="portfolio"></a>
-          <a href="https://github.com/zabrinatan" target="_blank"><img src="images/github.svg" alt="github"></a>
-          <a href="https://www.linkedin.com/in/zabrina-lagamayo/" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
-          <a href="https://twitter.com/zabrinatan" target="_blank"><img src="images/twitter.svg" alt="linkedin"></a>
-        </div>
+          <img class="photo" src="images/zabrina4.png" alt="zabrina picture">
+          <button id="resume">View my Resume</button>
+          <div id="social">
+            <a href="https://zabrinatan.github.io" target="_blank"><img src="images/portfolio.svg" alt="portfolio"></a>
+            <a href="https://github.com/zabrinatan" target="_blank"><img src="images/github.svg" alt="github"></a>
+            <a href="https://www.linkedin.com/in/zabrina-lagamayo/" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
+            <a href="https://twitter.com/zabrinatan" target="_blank"><img src="images/twitter.svg" alt="linkedin"></a>
+          </div>
         </div>
         <div class="about-me">
           <h2>About Me: Zabrina Lagamayo</h2>
           <p id="title">Web Developer</p>
           <p>I am analytical and inquisitive by nature which has led me to the wonderful path of Web Development. Whilst working as a Market Researcher, I taught myself VBA to generate workflow efficiencies. I then tried to teach myself JavaScript,
             Python and also dabbled a bit in trying to create a mechanical arm in my spare time but I quickly realised I needed to learn the fundamentals of programming and so I joined General Assembly.</p>
-          <p>I have always liked the idea of creating. Since undertaking the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the byproduct
+          <p>I have always liked the idea of creating. Since undertaking the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the
+            byproduct
             of hard work gives me a great sense of achievement. I would love to work for a company that nurtures growth and learning. </p>
 
 
@@ -78,53 +79,6 @@
         <h1> Portfolio Work </h1>
         <div id="arrow-buttons"></div>
         <div class="portfolio-carousel">
-          <div id="tictactoe" class="slides">
-            <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">
-               <img src="images/tictactoe.gif"/>
-              </a>
-            <div class="port-content">
-              <h2>Tic-Tac-Toe</h2><a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
-                    <p>My iteration of the game allows two players to play against each other. The first player is asked to choose the icon they'd like to be represented as and the second player's icon will be dependent on the first player's icon choice.</p>
-              <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Javascript</span></div>
-
-
-
-
-
-            </div>
-
-          </div>
-
-          <div id="dashboard" class="slides">
-            <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">
-              <img src="images/dashboard.gif"/>
-
-
-            </a>
-            <div class="port-content">
-              <h2>Travel-Book </h2><a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
-                    <p>Travel Book is a travel tool designed to allow users to access information based on location searches. This application has a dashboard functionality where users can save searches and allow them to plan future travels. </p>
-              <div class="tech"><span>jQuery</span><span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
-
-            </div>
-          </div>
-
-          <div id="meetyou" class="slides">
-            <a href="https://todo-meetyou.herokuapp.com/" target="_blank">
-              <img src="images/meetyou.gif"/>
-
-            </a>
-            <div class="port-content">
-              <h2>TODO: Meet you</h2> <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
-    <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
-                  <p> TODO:Meet you is a dating site catered towards singles in the tech industry. Users can browse profiles, like and unlike users and message matched profiles. </p>
-              <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
-
-            </div>
-
-          </div>
-
-
           <div id="loseit" class="slides">
             <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">
               <img src="images/loseit.gif"/>
@@ -132,21 +86,58 @@
             </a>
             <div class="port-content">
               <h2>Lose it! </h2><a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
-                    <p>Lose it! is a recipe website designed for people who want to lose weight. Users can search for recipes and build customisable mealplans for the whole week.</p>
+              <p>Lose it! is a recipe website designed for people who want to lose weight. Users can search for recipes and build customisable mealplans for the whole week.</p>
               <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>PostgreSQL</span><span>HTML5/CSS3</span> <span>Javascript</span><span>Edamam Recipe API</span></div>
 
+            </div>
+
+          </div>
+          <div id="meetyou" class="slides">
+            <a href="https://todo-meetyou.herokuapp.com/" target="_blank">
+              <img src="images/meetyou.gif"/>
+
+            </a>
+            <div class="port-content">
+              <h2>TODO: Meet you</h2> <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
+              <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
+              <p> TODO:Meet you is a dating site catered towards singles in the tech industry. Users can browse profiles, like and unlike users and message matched profiles. </p>
+              <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
+
+            </div>
+
+          </div>
+          <div id="dashboard" class="slides">
+            <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">
+              <img src="images/dashboard.gif"/>
+
+            </a>
+            <div class="port-content">
+              <h2>Travel-Book </h2><a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
+              <p>Travel Book is a travel tool designed to allow users to access information based on location searches. This application has a dashboard functionality where users can save searches and allow them to plan future travels. </p>
+              <div class="tech"><span>jQuery</span><span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
+
+            </div>
+          </div>
+          <div id="tictactoe" class="slides">
+            <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">
+               <img src="images/tictactoe.gif"/>
+              </a>
+            <div class="port-content">
+              <h2>Tic-Tac-Toe</h2><a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
+              <p>My iteration of the game allows two players to play against each other. The first player is asked to choose the icon they'd like to be represented as and the second player's icon will be dependent on the first player's icon choice.</p>
+              <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Javascript</span></div>
             </div>
 
           </div>
 
           <div id="portfolio" class="slides">
 
-   <img src="images/portfolio.png"/>
+            <img src="images/portfolio.png"/>
 
             <div class="port-content">
               <h2>Portfolio </h2><a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
-  <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a>
-            <p>My Portfolio where you can find out things about me!</p>
+              <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a>
+              <p>My Portfolio where you can find out things about me!</p>
               <div class="tech"><span>jQuery</span><span>Javascript</span><span>HTML5/CSS3</span> <span>Slick.js</span></div>
 
             </div>
@@ -183,13 +174,13 @@
         <h1>Get in touch!</h1>
         <div class="contact">
           <div class="mail">
-        <img src="images/envelope.svg" alt="envelope">
-          <a href="mailto:zabrinatan@hotmail.com">zabrinatan@hotmail.com</a>
-        </div>
-        <div class="phone">
-        <img src="images/phone.svg" alt="phone">
-        <p>0420939029</p>
-        </div>
+            <img src="images/envelope.svg" alt="envelope">
+            <a href="mailto:zabrinatan@hotmail.com">zabrinatan@hotmail.com</a>
+          </div>
+          <div class="phone">
+            <img src="images/phone.svg" alt="phone">
+            <p>0420939029</p>
+          </div>
 
         </div>
       </div>
