--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <link rel="stylesheet" href="css/slick-theme.css">
   <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
   <link rel="stylesheet" href="css/master.css">
@@ -20,28 +21,24 @@
 
 <body>
   <div class="container">
-
     <div id="section_1" class="box">
-
       <div id="overlay">
-
         <div id="name">
           <h1>Zabrina Lagamayo </h1>
           <h2>Front-end Web Developer</h2>
-
-
-          <svg id="arrow" aria-hidden="true" data-prefix="fas" data-icon="angle-double-down" class="svg-inline--fa fa-angle-double-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path id="arrowpath" d="M143 256.3L7 120.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0L313 86.3c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.4 9.5-24.6 9.5-34 .1zm34 192l136-136c9.4-9.4 9.4-24.6 0-33.9l-22.6-22.6c-9.4-9.4-24.6-9.4-33.9 0L160 352.1l-96.4-96.4c-9.4-9.4-24.6-9.4-33.9 0L7 278.3c-9.4 9.4-9.4 24.6 0 33.9l136 136c9.4 9.5 24.6 9.5 34 .1z"></path>
-                </svg>
-
-        </div>
-        <svg id="home-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1400 300" preserveAspectRatio="none">
-              <path class="p-curve" d="M-0.2,0.5c0,0-21.7,99.6,233.1,99.6s320.1,199.7,467.6,200.1S898.6,100,1167.6,100S1401,0,1401,0v301H0 L-0.2,0.5z"></path>
+          <svg id="arrow" aria-hidden="true" data-prefix="fas" data-icon="angle-double-down" class="svg-inline--fa fa-angle-double-down fa-w-10"
+            role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+            <path id="arrowpath" d="M143 256.3L7 120.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0L313 86.3c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.4 9.5-24.6 9.5-34 .1zm34 192l136-136c9.4-9.4 9.4-24.6 0-33.9l-22.6-22.6c-9.4-9.4-24.6-9.4-33.9 0L160 352.1l-96.4-96.4c-9.4-9.4-24.6-9.4-33.9 0L7 278.3c-9.4 9.4-9.4 24.6 0 33.9l136 136c9.4 9.5 24.6 9.5 34 .1z"></path>
           </svg>
+        </div>
+        <svg id="home-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 1400 300" preserveAspectRatio="none">
+          <path class="p-curve" d="M-0.2,0.5c0,0-21.7,99.6,233.1,99.6s320.1,199.7,467.6,200.1S898.6,100,1167.6,100S1401,0,1401,0v301H0 L-0.2,0.5z"></path>
+        </svg>
 
       </div>
       <nav>
         <div class="tag">Zabrina L </div>
-
         <a id="1" class="active" href="#section_1">Home</a>
         <a id="2" href="#section_2">About Me</a>
         <a id="3" href="#section_3">Portfolio</a>
@@ -61,15 +58,14 @@
           </div>
         </div>
         <div class="about-me">
-          <h2>About Me: Zabrina Lagamayo</h2>
-          <p id="title">Web Developer</p>
-          <p>I am analytical and inquisitive by nature which has led me to the wonderful path of Web Development. Whilst working as a Market Researcher, I taught myself VBA to generate workflow efficiencies. I then tried to teach myself JavaScript,
-            Python and also dabbled a bit in trying to create a mechanical arm in my spare time but I quickly realised I needed to learn the fundamentals of programming and so I joined General Assembly.</p>
-          <p>I have always liked the idea of creating. Since undertaking the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the
-            byproduct
-            of hard work gives me a great sense of achievement. I would love to work for a company that nurtures growth and learning. </p>
-
-
+          <h2>I'm Zabrina!</h2>
+          <p>I'm a graduate of General Assembly's Web Development Immersive course and currently work
+            as a Frontend Software Engineer at Blake e-Learning. In my role, I mainly work with Javascript on an Ember.js framework and 
+            seldom dabble with Ruby on Rails. 
+          </p>
+          <p>I am a keen bean, always interested in expanding my knowledge and experience. In my spare time these days, I've been expanding my knowledge of React.js with Redux and Typescript,
+             which I'm currently putting into practice on a side project app in development. 
+          </p>
         </div>
 
 
@@ -81,76 +77,82 @@
         <div class="portfolio-carousel">
           <div id="loseit" class="slides">
             <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">
-              <img src="images/loseit.gif"/>
+              <img src="images/loseit.gif" />
 
             </a>
             <div class="port-content">
-              <h2>Lose it! </h2><a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
-              <p>Lose it! is a recipe website designed for people who want to lose weight. Users can search for recipes and build customisable mealplans for the whole week.</p>
-              <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>PostgreSQL</span><span>HTML5/CSS3</span> <span>Javascript</span><span>Edamam Recipe API</span></div>
+              <h2>Lose it! </h2><a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a>
+              | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
+              <p>Lose it! is a recipe website designed for people who want to lose weight. Users can search for recipes
+                and build customisable mealplans for the whole week.</p>
+              <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>PostgreSQL</span><span>HTML5/CSS3</span>
+                <span>Javascript</span><span>Edamam Recipe API</span></div>
 
             </div>
 
           </div>
           <div id="meetyou" class="slides">
             <a href="https://todo-meetyou.herokuapp.com/" target="_blank">
-              <img src="images/meetyou.gif"/>
+              <img src="images/meetyou.gif" />
 
             </a>
             <div class="port-content">
               <h2>TODO: Meet you</h2> <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
               <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
-              <p> TODO:Meet you is a dating site catered towards singles in the tech industry. Users can browse profiles, like and unlike users and message matched profiles. </p>
-              <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
+              <p> TODO:Meet you is a dating site catered towards singles in the tech industry. Users can browse
+                profiles, like and unlike users and message matched profiles. </p>
+              <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google
+                  Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
 
             </div>
 
           </div>
           <div id="dashboard" class="slides">
             <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">
-              <img src="images/dashboard.gif"/>
+              <img src="images/dashboard.gif" />
 
             </a>
             <div class="port-content">
-              <h2>Travel-Book </h2><a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
-              <p>Travel Book is a travel tool designed to allow users to access information based on location searches. This application has a dashboard functionality where users can save searches and allow them to plan future travels. </p>
-              <div class="tech"><span>jQuery</span><span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
+              <h2>Travel-Book </h2><a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> |
+              <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
+              <p>Travel Book is a travel tool designed to allow users to access information based on location searches.
+                This application has a dashboard functionality where users can save searches and allow them to plan
+                future travels. </p>
+              <div class="tech"><span>jQuery</span><span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>Google
+                  Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap
+                  API</span><span>Flickr Images</span></div>
 
             </div>
           </div>
           <div id="tictactoe" class="slides">
             <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">
-               <img src="images/tictactoe.gif"/>
-              </a>
+              <img src="images/tictactoe.gif" />
+            </a>
             <div class="port-content">
-              <h2>Tic-Tac-Toe</h2><a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
-              <p>My iteration of the game allows two players to play against each other. The first player is asked to choose the icon they'd like to be represented as and the second player's icon will be dependent on the first player's icon choice.</p>
+              <h2>Tic-Tac-Toe</h2><a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
+              <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
+              <p>My iteration of the game allows two players to play against each other. The first player is asked to
+                choose the icon they'd like to be represented as and the second player's icon will be dependent on the
+                first player's icon choice.</p>
               <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Javascript</span></div>
             </div>
 
           </div>
-
           <div id="portfolio" class="slides">
-
-            <img src="images/portfolio.png"/>
-
+            <img src="images/portfolio.png" />
             <div class="port-content">
               <h2>Portfolio </h2><a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
               <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a>
               <p>My Portfolio where you can find out things about me!</p>
               <div class="tech"><span>jQuery</span><span>Javascript</span><span>HTML5/CSS3</span> <span>Slick.js</span></div>
-
             </div>
 
           </div>
         </div>
       </div>
-
-
       <div id="section_4" class="box">
         <h1>Tech Skills</h1>
         <div class="icons">
-          <i class="devicon-atom-original-wordmark colored"></i>
           <i class="devicon-bootstrap-plain-wordmark colored"></i>
           <i class="devicon-css3-plain-wordmark colored"></i>
           <i class="devicon-git-plain-wordmark colored"></i>
@@ -164,10 +166,8 @@
           <i class="devicon-rails-plain-wordmark colored"></i>
           <i class="devicon-ruby-plain-wordmark colored"></i>
           <i class="devicon-sass-original colored"></i>
-          <i class="devicon-slack-plain-wordmark colored"></i>
-
-
-
+          <i class="devicon-typescript-plain colored"></i>
+          <img class="ember" src="images/ember.png"/>
         </div>
       </div>
       <div id="section_5" class="box">
@@ -184,18 +184,6 @@
 
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
     </div>
-
 </body>
-
 </html>
